--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/IMG_1645.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Digital Resume"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Stanton Sailsbury" />
+    <meta name="twitter:description" content="Digital resume." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/IMG_1645.png" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/IMG_1645.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
